<resources>
    <string name="app_name" translatable="false">SingMe</string>

    <string name="messenger">Messenger</string>
    <string name="profile">Profile</string>
    <string name="library">Library</string>
    <string name="home">Home</string>
    <string name="catalogue">Catalogue</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_authorized">You are not authorized</string>

    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>

    <string name="not_verify">Account is not verify</string>
    <string name="incorrect_email_password">Incorrect email or password</string>
    <string name="verify_message">A confirmation email has been sent to your email</string>

    <string name="null_name">Name is null</string>
    <string name="null_last_name">Last Name is null</string>
    <string name="null_email">Email is null</string>
    <string name="null_pass">Password is null</string>
    <string name="not_equals_pass">Passwords not equals</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="small_pass">The password must contain more than 8 characters</string>
    <string name="email_exist">User with same email is already exist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="albums">Albums</string>
    <string name="Playlists">Playlists</string>
    <string name="Bands">Bands</string>

    <string name="my_music">My music</string>

    <string name="exit">Exit</string>

    <string name="large_text" translatable="false">
        A
    \nB
    \nC
    </string>

    <string name="members">Members</string>
    <string name="band_info">About</string>
    <string name="top_tracks">Top tracks</string>
    <string name="all">All</string>
    <string name="discography">Discography</string>
    <string name="singles_ep">Singles/EP</string>
    <string name="my_projects">My projects</string>
    <string name="projects">Projects</string>
    <string name="enter_project_name">Enter the project name</string>
    <string name="choose_project_avatar">Choose an avatar</string>
    <string name="choose_project_background">Choose a background</string>
    <string name="write_project_information">Write information about the project</string>
    <string name="add_your_project_roles">Add your roles in the project</string>
    <string name="choose">Choose</string>
    <string name="create_project">Create project</string>
    <string name="roles">Roles</string>
    <string name="add">Add</string>
    <string name="fill_all_fields">Fill in all the fields</string>
    <string name="this_project_already_exist">This project is already exist</string>
    <string name="finish_editing_text">Finish editing the text</string>
    <string name="my_friends">My friends</string>
    <string name="requests">Friend requests</string>
    <string name="my_requests">My friend requests</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="cancel_my_request">Cancel equest</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="delete_friend">Delete a friend</string>
    <string name="friendship_request">Send a friendship request</string>
    <string name="choose_new_member">Choose a new member</string>

    <string name="friends">Friends</string>
    <string name="user_requests">User requests</string>
    <string name="enter_album_name">Enter the album name</string>
    <string name="album">Album</string>
    <string name="single_ep">Single/EP</string>
    <string name="choose_cover">Choose a cover</string>
    <string name="add_album_genres">Add album genres</string>
    <string name="genres">Genres</string>
    <string name="add_album_tracks">Add album tracks</string>
    <string name="tracks">Tracks</string>
    <string name="create_album">Create album</string>
    <string name="add_track">Add track</string>
    <string name="delete_track">Delete track</string>
    <string name="go_to_band">Go to band</string>
    <string name="go_to_album">Go to album</string>
    <string name="album_exist">This album already exists with this band</string>
    <string name="add_album">Add album</string>
    <string name="delete_album_from_love">Delete from love</string>
    <string name="delete_album">Delete album</string>
    <string name="change_playlist">Change playlist</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="delete_playlist_from_love">Delete playlist from love</string>
    <string name="add_playlist_to_love">Add playlist to love</string>
    <string name="enter_playlist_name">Enter the name of the playlist</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="delete_from_playlist">Delete from playlist</string>
    <string name="new_tracks">New Tracks</string>
    <string name="new_albums">New albums</string>
    <string name="news">News</string>
    <string name="popular">Popular</string>
    <string name="popular_tracks">Popular tracks</string>
    <string name="popular_albums">Popular albums</string>
    <string name="new_names">New names</string>
    <string name="publish_new_album">The artist has published a new album</string>
    <string name="here_posts">News about the artists you are subscribed to will be published here.</string>
    <string name="playlists">Playlists</string>
    <string name="change_avatar">Change avatar</string>
    <string name="real_name">Real name</string>
    <string name="null_real_name">Real name is null</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_date_birth">Choose your date of birth</string>
    <string name="choose_sex">Choose your sex</string>
    <string name="save">Save</string>
    <string name="change_user_data">Change data</string>
    <string name="my_albums">My Albums</string>
    <string name="my_playlists">My playlists</string>
    <string name="my_subscribes">My subscribes</string>
    <string name="type_here_to_search">Type here to search</string>
    <string name="sort_by">Sort by</string>
    <string name="by_default">By default</string>
    <string name="by_name">By name</string>
    <string name="by_date">By date</string>
    <string name="by_band">By band</string>
    <string name="by_album">By album</string>
    <string name="by_age">By age</string>
    <string name="by_sex">By sex</string>


</resources>