<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"
        android:title="@string/home" />
    <item
        android:id="@+id/catalogueFragment"
        android:icon="@drawable/ic_catalogue"
        android:title="@string/catalogue"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/messengerFragment"
        android:icon="@drawable/ic_messenger"
        android:title="@string/messenger"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/myLibraryFragment"
        android:icon="@drawable/ic_library"
        android:title="@string/library"
        android:orderInCategory="4"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:orderInCategory="5"/>
</menu>